# convexkernels

./: .gitignore  pyproject.toml
convexkernels/algorithms/: admm.py  alm.py  fista.py  fista_path.py  gap.py  kkt.py  kkt_batched.py  pdhg.py
convexkernels/bench/: baselines.py  curves.py  eq_qp_shapes.py  metrics.py  (+6 more)
docs/: mac_probe.md  roofline.md  schema.md
scripts/: baseline_pdhg_tv.py  confirm_gram_champion.py  lineage_dashboard.py  lineage_summary.py  monitor_remote.sh  overnight_lasso_path.sh  overnight_multi_slot.sh  parallel_chains.sh  plot_gap_time.py  reeval_killtest.py  run_adelie_baseline.py  run_algopool_bench.py  run_mlx_seed_benchmark.py  run_pareto_panel.py  run_torch_seed_benchmark.py
tasks/: autoresearch_context.md  handoff.md  lessons.md  mac_probe_output.txt  program_kernel.md  results.md  todo.md
tests/: test_admm.py  test_algopool.py  test_alm.py  test_applier.py  test_basis_pursuit.py  test_champion_store.py  test_checkpoints.py  test_cost_model_hint.py  test_curves.py  test_director.py  test_duality_gap.py  test_edits.py  test_fista.py  test_fitness.py  test_gap_panel.py  test_kernels.py  test_kkt.py  test_lasso_path.py  test_loop_pareto.py  test_metrics.py  test_mutation_proposer.py  test_nonnegative_lasso.py  test_pareto.py  test_pareto_archive.py  test_pdhg.py  test_plotting.py  test_proposer_openai.py  test_recorder.py  test_research_state_dedup.py  test_resume_history.py  test_roofline.py  test_sandbox.py  test_smoke.py  test_solve_contract.py  test_structured_proposer.py  test_synth_loop.py  test_torch_path_seed.py  test_transfer.py
(+58 files in other folders)
