[project]
name = "convexkernels"
version = "0.0.1"
description = "KKT-gated LLM kernel synthesis for convex optimization"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "cvxpy>=1.4,<1.6",
    "scs>=3.2",
    "osqp>=0.6",
    "ecos>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "polars>=0.20",
]

[project.optional-dependencies]
mac = ["mlx>=0.18"]
baselines = ["adelie>=1.1", "alpaqa==1.1.0a1"]
ai = ["openai>=1.109"]
dev = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["convexkernels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
